Remove not necessary stuff